envoy_http_filter.yaml
static_resources:
    listeners:
      name: listener_0
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 15001
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                stat_prefix: sample
                route_config:
                  name: gmem
                  virtual_hosts:
                    - name: gmem
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: gmem
                http_filters:
                  - name: sample
                    config:
                      key: via
                      val: sample-filter
                  - name: envoy.router
    clusters:
      - name: gmem
        connect_timeout: 1s
        type: STRICT_DNS
        dns_lookup_family: V4_ONLY
        lb_policy: ROUND_ROBIN
        hosts:
          - socket_address:
              address: 106.12.102.69
              port_value: 80
