envoy_http_lua.yaml
static_resources:
    listeners:
      name: listener_0
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 15001
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                stat_prefix: sample
                route_config:
                  name: luafilter
                  virtual_hosts:
                    - name: gmem
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: luafilter
                http_filters:
                - name: envoy.filters.http.lua
                  typed_config:
                    "@type": type.googleapis.com/envoy.config.filter.http.lua.v2.Lua
                    inline_code: |
                      call_count = 0
                      function envoy_on_request(request_handle)
                        request_handle:headers():add("foo", "bar")
                      end
                      function envoy_on_response(response_handle)
                        body_size = response_handle:body():length()
                        call_count = call_count + 1
                        response_handle:headers():add("response-body-size", tostring(body_size))
                        response_handle:headers():add("count_num", tostring(call_count))
                      end
                - name: envoy.filters.http.router
                  typed_config: {}
    clusters:
      - name: luafilter
        connect_timeout: 1s
        type: STRICT_DNS
        dns_lookup_family: V4_ONLY
        lb_policy: ROUND_ROBIN
        hosts:
          - socket_address:
              address: 106.12.102.69
              port_value: 80
