envoy_http_lua2.yaml
static_resources:
    listeners:
      name: listener_0
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 15001
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                stat_prefix: sample
                route_config:
                  name: luafilter
                  virtual_hosts:
                    - name: gmem
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: luafilter
                http_filters:
                - name: envoy.lua
                  config:
                    inline_code: |
                      call_count = 0
                      function envoy_on_request(request_handle) 
                        call_count = call_count + 1
                        print("luafile output" .. call_count)                  
                        request_handle::respond(
                          {[":status"] = "200",
                           ["upstream_count_num"] = call_count},
                          "nope")
                      end
                  - name: envoy.router
    clusters:
      - name: luafilter
        connect_timeout: 1s
        type: STRICT_DNS
        dns_lookup_family: V4_ONLY
        lb_policy: ROUND_ROBIN
        hosts:
          - socket_address:
              address: 106.12.102.69
              port_value: 80
